Refactor print.c and add rand.h and time.asm files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
     "C_Cpp.errorSquiggles": "enabled",
     "cSpell.words": [
         "Strln"
-    ]
+    ],
+    "files.associations": {
+        "rand.h": "c"
+    }
 }
