dummy commit (just cleaning up files)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "Strln"
     ],
     "files.associations": {
-        "rand.h": "c"
+        "rand.h": "c",
+        "stddef.h": "c"
     }
 }
